--- a/librarymanagement/src/main/resources/application.properties
+++ b/librarymanagement/src/main/resources/application.properties
@@ -1,6 +1,12 @@
 spring.application.name=librarymanagement
 
 spring.datasource.url=jdbc:mysql://localhost:3306/librarymanagement
-spring.jpa.hibernate.ddl-auto=update
 spring.datasource.username=schoolmanager
 spring.datasource.password=schoolmanager
+
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true;
